# softbot

./: .babelrc  .gitignore  .gitmodules  README.md  babel.config.js  config.json  gulpfile.js  log.txt  package-lock.json  package.json  webpack.config.js
client/: admin.js  avatar.js  config.js  control.js  game.js  index.js  rtc-controller.js  socket-controller.js
client/admin/: console.js  display.js  janus-connection.js  listener.js  main.js  recorder.js  streamer.js
client/avatar/: arms.js  avatar-root.js  expression.js  game-controller.js  game.js  hitodama-avatar.js  idle.js  index.js  pitch-shifter.js  recognizer-watson.js  recognizer.js  synth.js  voice.js  youtube-player.js
client/common/: Expressions.js  expression.js  expressions.js  hitodama-pics-control.js  hitodama-pics.js  hitodama.js  keyboard.js  language-select.js  socket-controller.js  socket-messenger.js  state.js  util.js
client/control/: body.js  camera.js  console.js  control-layout.js  control-root.js  display.js  expression.js  hitodama-arm-control.js  hitodama-control.js  hitodama-hud.js  hitodama-sense.js  hitodama-speech.js  hitodama-transcript.js  hitodama-video.js  hitodama-vision-control.js  hitodama-youtube.js  hud.js  index.js  janus.js  language-select-hybrids.js  language-select-react.js  language-select.js  listener.js  main.js  recorder.js  sign-in.js  speech.js  state.js  streamer.js  transcript.js  youtube-remote.js
fritzing/: softbot.fzz
public/: control.html  index.html
public/admin/: index.html
public/avatar/: index.html
public/control/: index.html
public/css/: softbot.css
public/test/: decode-buffer.html  file.html  index.html  media-element-source-file.html  media-element-source.html  ms-api.html  speak.mpga  voice.html  web-audio-speech.mpga  (+1 more)
scripts/: emulate_serial.sh  rotate_touch.sh  start_chromium.sh  start_stream.sh  start_stream_local.sh  start_stream_test.sh
server/: app.js  comm.js  config.js  forms.js  google-translate.js  index.js  ms-tts.js  signaling.js  unsplash.js
softcontrol/: SerialPort.cpp  SerialPort.h  make.sh  serialworker.py  softcontrol  softcontrol.cpp  softcontrol.py  softcontrol_janus.py
softcontrol/rust/soft_control/: Cargo.toml  Cargo_old.toml  config-rpi.json  config.json
softcontrol/rust/soft_control/src/: breakout.rs  breakout_state.rs  game.rs  main.rs  soft_error.rs  ws_server.rs
softcontrol/rust/wasm/: Cargo.toml  breakout_state.rs
(+46 files in other folders)
