[package]
name = "soft_control"
version = "0.1.0"
authors = ["Avnerus <avnerus@gmail.com>"]

[lib]
name = "breakout"
path = "src/breakout.rs"
crate-type = ["cdylib"]

[[bin]]
name = "soft_control"
path = "src/main.rs"

# This is a workaround to separate binary dependencies from the lib (which will be compiled in WASM as well)
# https://github.com/rust-lang/cargo/issues/1982
required-features = ["binaries"]

[features]
binaries = ["ws","serialport", "argparse", "serde", "serde_derive", "serde_json","byteorder"]

[dependencies]
ws = { version = "*", optional = true }
serialport = {version = "*", optional = true }
argparse = {version = "*", optional = true }
serde = {version = "1.0", optional = true }
serde_derive = {version = "1.0", optional = true}
serde_json = {version = "1.0", optional = true}
byteorder = {version = "*", optional = true}
wasm-bindgen = "0.2.4"

[profile.release]
# Include function names in the `.wasm` for better debugging and
# profiling. Comment this out if you're trying to create the smallest `.wasm`
# binaries you can.
debug = true

# # Uncomment these lines to create smaller `.wasm` binaries, at the cost of
# # longer compile times.
# codegen-units = 1
# incremental = false
# lto = true
# opt-level = "z"
