[package]
name = "soft_control"
version = "0.1.0"
authors = ["Avnerus <avnerus@gmail.com>"]

[[bin]]
name = "soft_control"
path = "src/main.rs"

[dependencies]
ws = { version = "*"}
serialport = {version = "*"}
argparse = {version = "*"}
serde = {version = "1.0"}
serde_derive = {version = "1.0"}
serde_json = {version = "1.0"}
byteorder = {version = "*"}
chrono = {version = "*"}

