[package]
name = "breakout_wasm"
version = "0.1.0"
authors = ["Avnerus <avnerus@gmail.com>"]

[lib]
name = "breakout"
path = "./breakout.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.4"

[profile.release]
# Include function names in the `.wasm` for better debugging and
# profiling. Comment this out if you're trying to create the smallest `.wasm`
# binaries you can.
debug = true

# # Uncomment these lines to create smaller `.wasm` binaries, at the cost of
# # longer compile times.
# codegen-units = 1
# incremental = false
# lto = true
# opt-level = "z"
